--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Core dependencies
+pytest==8.3.5
+requests==2.32.3
+selenium==4.31.0
+
+# Below are indirect deps installed by pip
 attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -8,10 +14,7 @@ outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.5.0
 PySocks==1.7.1
-pytest==8.3.5
 pytest-repeat==0.9.4
-requests==2.32.3
-selenium==4.31.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 trio==0.29.0
